--- a/notebooks/merchant_preprocess.ipynb
+++ b/notebooks/merchant_preprocess.ipynb
@@ -30,11 +30,12 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/10/02 01:50:39 WARN Utils: Your hostname, DESKTOP-F216TKE resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
-      "24/10/02 01:50:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/10/13 21:51:49 WARN Utils: Your hostname, DESKTOP-F216TKE resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
+      "24/10/13 21:51:49 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/10/02 01:50:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/10/13 21:51:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/10/13 21:51:51 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -262,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'23686790459', '82999039227', '59258669983', '83220249221', '57564805948', '75892370170', '19010030815', '29674997261', '73052515151', '94311056026', '99989036621', '14827550074', '81146325646'}\n"
+      "{'23686790459', '14827550074', '75892370170', '99989036621', '81146325646', '29674997261', '57564805948', '82999039227', '19010030815', '73052515151', '94311056026', '83220249221', '59258669983'}\n"
      ]
     }
    ],
