--- a/notebooks/summary.ipynb
+++ b/notebooks/summary.ipynb
@@ -1376,6 +1376,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Location"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As according to the readme there is an equal number of consumers from all states and merchants have the same proportion of consumers geographically. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While in some features outliers can be recognized ther is a rather somewhat stable presence. In some cases an outlier in one feature such as less merchants in a tag category does not mean they should be removed as they may have many consumers or frequent sales. \n",
+    "As such the XGB model used takes all factors into account and ranks merchants appropriately. The statistics of the top merchants shows this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Segmentation"
    ]
   },
