added imputation code and finished summary part

--- a/notebooks/imputation.ipynb
+++ b/notebooks/imputation.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions = full_transactions.withColumn('merchant_fraud', F.col('merchant_fraud').cast(DoubleType()))"
+    "transactions = transactions.withColumn('merchant_fraud', F.col('merchant_fraud').cast(DoubleType()))"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions = full_transactions.withColumn('order_time', F.unix_timestamp('order_datetime'))"
+    "transactions = transactions.withColumn('order_time', F.unix_timestamp('order_datetime'))"
    ]
   },
   {
@@ -218,6 +218,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
+    "# Show testing of imputing merchant fraud probabilities\n",
     "#transactions = spark.read.parquet(\"../data/curated/transactions.parquet\")\n",
     "\n",
     "categories = transactions.select('tags').distinct().toPandas().dropna().astype(\"string\")['tags'].to_list()\n",
@@ -259,6 +260,9 @@
     "\n",
     "# Display graph of predicted vs actual\n",
     "plt.scatter(pipeline.predict(X_test), y_test)\n",
+    "plt.title(\"Predicted Merchant Fraud vs Actual Merchant Fraud\")\n",
+    "plt.ylabel('Actual Merchant Fraud (%)')\n",
+    "plt.xlabel(\"Predicted Merchant Fraud (%)\")\n",
     "print(f\"RMSE: {root_mean_squared_error(y_test, pipeline.predict(X_test))}\")"
    ]
   },
@@ -289,25 +293,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "g = sns.JointGrid(data=transactions, x='dollar_value', y='merchant_fraud_probability', height=12)\n",
+    "# Show merchant fraud against the transaction value, one of the factors in the KNN model\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "ax = sns.scatterplot(transactions, x='dollar_value', y='merchant_fraud_probability', alpha=0.5, color='blue')\n",
+    "plt.title(\"Merchant Fraud Against Transaction Value\")\n",
+    "plt.ylabel('Merchant Fraud Probability (%)')\n",
+    "plt.xlabel(\"Transaction Value ($)\")\n",
     "\n",
-    "g.plot(sns.scatterplot, sns.kdeplot)\n",
-    "\n",
-    "g.ax_joint.set_title(\"Merchant Fraud Against Transaction Value\")\n",
-    "g.ax_joint.set_xlabel(\"Transaction Value ($)\")\n",
-    "g.ax_joint.set_ylabel(\"Merchant Fraud Probability (%)\")\n",
-    "g.ax_joint.set_xlim(0, 110000)\n",
-    "g.ax_joint.set_ylim(0, 95)\n",
-    "g.ax_joint.grid()\n",
-    "\n",
-    "# sns.kdeplot(data=transactions, y='merchant_fraud_probability', ax=g.ax_marg_y, bw_adjust=0.5, fill=True)\n",
-    "\n",
-    "g.ax_marg_x.remove()\n",
-    "# g.ax_marg_y.set_title(\"KDE of Merchant Fraud Probability\")\n",
-    "# g.ax_marg_y.set_ylabel(\"Density\")\n",
-    "# g.ax_marg_y.set_xlim(0, 95)\n",
-    "\n",
+    "plt.xlim((0, 110000))\n",
+    "plt.ylim((0, 95))\n",
+    "plt.grid()\n",
     "plt.show()"
    ]
   },
@@ -317,24 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.jointplot(data=transactions, x='dollar_value', y='merchant_fraud_probability')\n",
-    "g = sns.JointGrid(data=transactions, x=\"dollar_value\", y=\"merchant_fraud_probability\")\n",
-    "g.plot_joint(sns.scatterplot, color='blue', alpha=0.5)\n",
-    "g.plot_marginals(sns.kdeplot, color='blue', fill=True, bw_adjust=6)\n",
-    "g.ax_marg_x.remove()\n",
-    "g.ax_joint.set_xlim(0, 110000)\n",
-    "g.ax_joint.set_ylim(0, 95)\n",
-    "g.ax_joint.set_title(\"Merchant Fraud Against Transaction Value\")\n",
-    "g.ax_joint.set_xlabel(\"Transaction Value ($)\")\n",
-    "g.ax_joint.set_ylabel(\"Merchant Fraud Probability (%)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Refit on the full transactions, and impute merchant fraud\n",
     "pipeline.fit(X, y)\n",
     "transactions = pd.read_parquet(\"../data/curated/transactions.parquet\")\n",
     "\n",
@@ -344,7 +322,7 @@
     "X_to_predict = transactions_to_predict.drop('merchant_fraud_probability', axis=1)\n",
     "\n",
     "transactions.loc[mask, 'merchant_fraud_probability'] = pipeline.predict(X_to_predict)\n",
-    "transactions.to_parquet(\"../data/curated/transactions1.parquet\")"
+    "transactions.to_parquet(\"../data/curated/transactions_merchant.parquet\")"
    ]
   },
   {
@@ -353,15 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
-    "\n",
-    "transactions = spark.read.parquet(\"../data/curated/transactions1.parquet\")\n",
+    "# Impute consumer fraud probabilities\n",
+    "transactions = spark.read.parquet(\"../data/curated/transactions_merchant.parquet\")\n",
     "\n",
     "categories = transactions.select('tags').distinct().toPandas().dropna().astype(\"string\")['tags'].to_list()\n",
     "transactions = transactions.where(F.col(\"fraud_probability\").isNotNull()).toPandas()\n",
@@ -404,12 +375,11 @@
     "\n",
     "pipeline.fit(X_train, y_train)\n",
     "\n",
-    "combined = X_test\n",
-    "combined['predicted'] = pipeline.predict(X_test)\n",
-    "combined['actual'] = y_test\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "sns.scatterplot(combined, x='predicted', y='actual', hue='tags')\n",
-    "\n",
+    "# Display graph of predicted vs actual\n",
+    "plt.scatter(pipeline.predict(X_test), y_test, alpha=0.5)\n",
+    "plt.title(\"Predicted Merchant Fraud vs Actual Merchant Fraud\")\n",
+    "plt.ylabel('Actual Merchant Fraud (%)')\n",
+    "plt.xlabel(\"Predicted Merchant Fraud (%)\")\n",
     "print(f\"RMSE: {root_mean_squared_error(y_test, pipeline.predict(X_test))}\")"
    ]
   },
@@ -419,8 +389,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Impute missing consumer fraud values\n",
+    "pipeline.fit(X, y)\n",
+    "transactions = pd.read_parquet(\"../data/curated/transactions_merchant.parquet\")\n",
+    "\n",
+    "mask = transactions['fraud_probability'].isna()\n",
+    "\n",
+    "transactions_to_predict = transactions.loc[mask, :]\n",
+    "X_to_predict = transactions_to_predict.drop('fraud_probability', axis=1)\n",
+    "\n",
+    "transactions.loc[mask, 'fraud_probability'] = pipeline.predict(X_to_predict)\n",
+    "transactions.to_parquet(\"../data/curated/transactions_imputed.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add features to get transactions ready to pass to model\n",
-    "transactions = spark.read.parquet(\"../data/curated/transactions2.parquet\")\n",
+    "transactions = spark.read.parquet(\"../data/curated/transactions_imputed.parquet\")\n",
     "transactions = transactions.withColumn('expected_revenue', \n",
     "                                       transactions.dollar_value\n",
     "                                       * (1.0 - transactions.merchant_fraud_probability / 100.0) \n",
@@ -475,8 +464,74 @@
     "transactions = transactions.select([col for col in transactions.columns if not col.endswith('original')])\n",
     "transactions = transactions.select([col for col in transactions.columns if not col.endswith('seasonal')])\n",
     "\n",
-    "transactions.write.mode('overwrite').parquet(\"../data/curated/transactions3.parquet\")\n",
-    "transactions.where(F.col('order_datetime') == '2021-12-26').show(truncate=False)"
+    "transactions.write.mode('overwrite').parquet(\"../data/curated/transactions_preprocessed.parquet\")\n",
+    "transactions.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add features to get transactions ready to pass to model\n",
+    "transactions = spark.read.parquet(\"../data/curated/transactions_imputed.parquet\")\n",
+    "transactions = transactions.withColumn('expected_revenue', \n",
+    "                                       transactions.dollar_value\n",
+    "                                       * (1.0 - transactions.merchant_fraud_probability / 100.0) \n",
+    "                                       * (1.0 - transactions.fraud_probability / 100.0) \n",
+    "                                       * transactions.take_rate / 100.0)\n",
+    "transactions = transactions.withColumn('day_of_week', F.dayofweek('order_datetime'))\n",
+    "transactions = transactions.withColumn('day_of_month', F.dayofmonth('order_datetime'))\n",
+    "transactions = transactions.withColumn('day_of_year', F.dayofyear('order_datetime'))\n",
+    "transactions = transactions.withColumn('month', F.month('order_datetime'))\n",
+    "\n",
+    "transactions = transactions.withColumn(\n",
+    "    \"is_holiday\",\n",
+    "    F.when(F.col(\"order_datetime\").isin([\n",
+    "        '2021-11-26',\n",
+    "        '2021-11-27',\n",
+    "        '2021-11-28',\n",
+    "        '2021-11-29',\n",
+    "        '2021-12-24',\n",
+    "        '2021-12-25',\n",
+    "        '2021-12-26',\n",
+    "    ]), F.lit(1)).otherwise(F.lit(0))\n",
+    ")\n",
+    "\n",
+    "transactions = transactions.withColumn(\n",
+    "    \"seasonal_sales\",\n",
+    "    F.when(F.col(\"state\") == \"NSW\", F.col(\"NSW_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"VIC\", F.col(\"VIC_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"QLD\", F.col(\"QLD_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"SA\", F.col(\"SA_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"WA\", F.col(\"WA_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"TAS\", F.col(\"TAS_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"NT\", F.col(\"NT_seasonal\"))\n",
+    "     .when(F.col(\"state\") == \"ACT\", F.col(\"ACT_seasonal\"))\n",
+    "     .otherwise(None)\n",
+    ")\n",
+    "\n",
+    "transactions = transactions.withColumn(\n",
+    "    \"original_sales\",\n",
+    "    F.when(F.col(\"state\") == \"NSW\", F.col(\"NSW_original\"))\n",
+    "     .when(F.col(\"state\") == \"VIC\", F.col(\"VIC_original\"))\n",
+    "     .when(F.col(\"state\") == \"QLD\", F.col(\"QLD_original\"))\n",
+    "     .when(F.col(\"state\") == \"SA\", F.col(\"SA_original\"))\n",
+    "     .when(F.col(\"state\") == \"WA\", F.col(\"WA_original\"))\n",
+    "     .when(F.col(\"state\") == \"TAS\", F.col(\"TAS_original\"))\n",
+    "     .when(F.col(\"state\") == \"NT\", F.col(\"NT_original\"))\n",
+    "     .when(F.col(\"state\") == \"ACT\", F.col(\"ACT_original\"))\n",
+    "     .otherwise(None)\n",
+    ")\n",
+    "\n",
+    "transactions = transactions.withColumnRenamed(\"Total_seasonal\", \"total_seasonal_sales\")\n",
+    "transactions = transactions.withColumnRenamed(\"Total_original\", \"total_original_sales\")\n",
+    "transactions = transactions.select([col for col in transactions.columns if not col.endswith('original')])\n",
+    "transactions = transactions.select([col for col in transactions.columns if not col.endswith('seasonal')])\n",
+    "\n",
+    "transactions.write.mode('overwrite').parquet(\"../data/curated/transactions_preprocessed.parquet\")\n",
+    "transactions.show()"
    ]
   },
   {
@@ -488,7 +543,7 @@
     "from pyspark.sql.window import Window\n",
     "from pyspark.sql import DataFrame\n",
     "\n",
-    "transactions = spark.read.parquet(\"../data/curated/transactions3.parquet\")\n",
+    "transactions = spark.read.parquet(\"../data/curated/transactions_preprocessed.parquet\")\n",
     "\n",
     "def skewness_udf(column):\n",
     "    return (F.mean(column) - F.median(column)) / F.stddev(column)\n",
@@ -519,87 +574,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "\n",
-    "y = 'mean_dollar_value'\n",
-    "df = agg_df.toPandas()\n",
-    "df = df.fillna(0)\n",
-    "df['record_count'] = np.log10(df['record_count'])\n",
-    "# df['dollar_value_median'] = np.log(df['dollar_value_median'])\n",
-    "# df['expected_revenue_median'] = np.log(df['expected_revenue_median'])\n",
-    "df[y] = np.log10(df[y])\n",
-    "pipeline = Pipeline([\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('kmeans', KMeans(n_clusters=3, random_state=0))\n",
-    "])\n",
-    "\n",
-    "df['cluster'] = pipeline.fit_predict(df[[\n",
-    "    'record_count', \n",
-    "    # 'merchant_fraud_probability', \n",
-    "    y\n",
-    "]])\n",
-    "\n",
-    "# fig = px.scatter(\n",
-    "#     df, \n",
-    "#     x='record_count', \n",
-    "#     y=y, \n",
-    "#     color='cluster', \n",
-    "#     title='log(mean dollar value) vs log(sales) by KMeans Cluster', \n",
-    "#     labels={\n",
-    "#         'record_count': 'log(sales)',\n",
-    "#         'expected_revenue_median': 'log(mean dollar value)'\n",
-    "#     },\n",
-    "#     hover_data=['merchant_abn']\n",
-    "# )\n",
-    "# fig.show()\n",
-    "\n",
-    "# df['record_count'] = np.exp(df['record_count'])\n",
-    "# df[y] = np.exp(df[y])\n",
-    "# sns.color_palette(\"tab10\")\n",
-    "# plt.figure(figsize=(8, 6))\n",
-    "# sns.scatterplot(df, x='record_count', y=y, hue='cluster', palette=sns.color_palette('tab10'))\n",
-    "# plt.title(\"Merchant Segmentation\")\n",
-    "# plt.ylabel('Log10(Average Transaction Value)')\n",
-    "# plt.xlabel(\"Log10(Number of Sales)\")\n",
-    "# plt.legend()\n",
-    "# plt.grid()\n",
-    "# plt.show()\n",
-    "df.loc[df['cluster'] == 0, 'cluster'] = \"Med price, Med sales\"\n",
-    "df.loc[df['cluster'] == 1, 'cluster'] = \"High price, Low sales\"\n",
-    "df.loc[df['cluster'] == 2, 'cluster'] = \"Low price, High sales\"\n",
-    "clusters = spark.createDataFrame(df).select('merchant_abn', 'cluster')\n",
-    "clusters.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df['record_count'] = np.log10(df['record_count'])\n",
-    "# df[y] = np.log10(df[y])\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.scatterplot(df, x='record_count', y=y, hue='cluster', palette=sns.color_palette(), alpha=0.5, s=30)\n",
-    "plt.title(\"Merchant Segmentation\")\n",
-    "plt.ylabel('Log10(Average Transaction Value)')\n",
-    "plt.xlabel(\"Log10(Number of Sales)\")\n",
-    "# plt.legend()\n",
-    "# plt.grid()\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -612,21 +586,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(\n",
-    "    df, \n",
-    "    x='record_count', \n",
-    "    y=y, \n",
-    "    color='tags', \n",
-    "    title='log(mean dollar value) vs log(sales) by KMeans Cluster', \n",
-    "    labels={\n",
-    "        'record_count': 'log(sales)',\n",
-    "        y: 'log(mean dollar value)'\n",
-    "    },\n",
-    "    hover_data=['merchant_abn']\n",
-    ")\n",
+    "# Cluster into merchant segments\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
     "\n",
-    "# Display plot\n",
-    "fig.show()"
+    "y = 'mean_dollar_value'\n",
+    "df = agg_df.toPandas()\n",
+    "df = df.fillna(0)\n",
+    "df['record_count'] = np.log10(df['record_count'])\n",
+    "df[y] = np.log10(df[y])\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('kmeans', KMeans(n_clusters=3, random_state=0))\n",
+    "])\n",
+    "\n",
+    "df['cluster'] = pipeline.fit_predict(df[[\n",
+    "    'record_count', \n",
+    "    y\n",
+    "]])\n",
+    "\n",
+    "df.loc[df['cluster'] == 0, 'cluster'] = \"Med price, Med sales\"\n",
+    "df.loc[df['cluster'] == 1, 'cluster'] = \"High price, Low sales\"\n",
+    "df.loc[df['cluster'] == 2, 'cluster'] = \"Low price, High sales\"\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.scatterplot(df, x='record_count', y=y, hue='cluster', palette=sns.color_palette(), alpha=0.5, s=30)\n",
+    "plt.title(\"Merchant Segmentation\")\n",
+    "plt.ylabel('Log10(Average Transaction Value)')\n",
+    "plt.xlabel(\"Log10(Number of Sales)\")\n",
+    "plt.show()\n",
+    "\n",
+    "clusters = spark.createDataFrame(df).select('merchant_abn', 'cluster')"
    ]
   }
  ],
